@@ -6,7 +6,7 @@ import static org.assertj.core.api.Assertions.assertThatCode;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
 import org.assertj.core.api.ThrowableAssert.ThrowingCallable;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -73,9 +73,7 @@ class ProvideTaskStatusReportAccTest extends AbstractReportAccTest {
   @Test
   void should_NotThrowSqlExceptionDuringAugmentation_When_ReportContainsNoRows() {
     TaskStatusReport.Builder builder =
-        MONITOR_SERVICE
-            .createTaskStatusReportBuilder()
-            .domainIn(Collections.singletonList("DOES NOT EXIST"));
+        MONITOR_SERVICE.createTaskStatusReportBuilder().domainIn(List.of("DOES NOT EXIST"));
     ThrowingCallable test =
         () -> {
           TaskStatusReport report = builder.buildReport();
@@ -145,7 +143,7 @@ class ProvideTaskStatusReportAccTest extends AbstractReportAccTest {
     TaskStatusReport report =
         MONITOR_SERVICE
             .createTaskStatusReportBuilder()
-            .stateIn(Collections.singletonList(TaskState.READY))
+            .stateIn(List.of(TaskState.READY))
             .buildReport();
 
     assertThat(report).isNotNull();
@@ -200,7 +198,7 @@ class ProvideTaskStatusReportAccTest extends AbstractReportAccTest {
     TaskStatusReport report =
         MONITOR_SERVICE
             .createTaskStatusReportBuilder()
-            .workbasketIdsIn(Collections.singletonList("WBI:000000000000000000000000000000000003"))
+            .workbasketIdsIn(List.of("WBI:000000000000000000000000000000000003"))
             .buildReport();
 
     assertThat(report).isNotNull();
