@@ -55,17 +55,16 @@ class WorkbasketReportBuilderImplTest {
 
   @Test
   void testGetTotalNumbersOfWorkbasketReportBasedOnDueDate() throws Exception {
-    final List<String> workbasketIds =
-        Collections.singletonList("WBI:000000000000000000000000000000000001");
+    final List<String> workbasketIds = List.of("WBI:000000000000000000000000000000000001");
     final List<TaskState> states = Arrays.asList(TaskState.CLAIMED, TaskState.READY);
-    final List<String> categories = Collections.singletonList("EXTERN");
-    final List<String> domains = Collections.singletonList("DOMAIN_A");
-    final List<String> classificationIds = Collections.singletonList("L10000");
-    final List<String> excludedClassificationIds = Collections.singletonList("L20000");
+    final List<String> categories = List.of("EXTERN");
+    final List<String> domains = List.of("DOMAIN_A");
+    final List<String> classificationIds = List.of("L10000");
+    final List<String> excludedClassificationIds = List.of("L20000");
     Map<TaskCustomField, String> customAttributeFilter = new HashMap<>();
     customAttributeFilter.put(TaskCustomField.CUSTOM_1, "Geschaeftsstelle A");
     final List<CombinedClassificationFilter> combinedClassificationFilter =
-        Collections.singletonList(
+        List.of(
             new CombinedClassificationFilter(
                 "CLI:000000000000000000000000000000000003",
                 "CLI:000000000000000000000000000000000008"));
@@ -119,22 +118,21 @@ class WorkbasketReportBuilderImplTest {
 
   @Test
   void testGetWorkbasketReportWithReportLineItemDefinitions() throws Exception {
-    final List<String> workbasketIds =
-        Collections.singletonList("WBI:000000000000000000000000000000000001");
+    final List<String> workbasketIds = List.of("WBI:000000000000000000000000000000000001");
     final List<TaskState> states = Arrays.asList(TaskState.CLAIMED, TaskState.READY);
-    final List<String> categories = Collections.singletonList("EXTERN");
-    final List<String> domains = Collections.singletonList("DOMAIN_A");
-    final List<String> classificationIds = Collections.singletonList("L10000");
-    final List<String> excludedClassificationIds = Collections.singletonList("L20000");
+    final List<String> categories = List.of("EXTERN");
+    final List<String> domains = List.of("DOMAIN_A");
+    final List<String> classificationIds = List.of("L10000");
+    final List<String> excludedClassificationIds = List.of("L20000");
     Map<TaskCustomField, String> customAttributeFilter = new HashMap<>();
     customAttributeFilter.put(TaskCustomField.CUSTOM_1, "Geschaeftsstelle A");
     final List<CombinedClassificationFilter> combinedClassificationFilter =
-        Collections.singletonList(
+        List.of(
             new CombinedClassificationFilter(
                 "CLI:000000000000000000000000000000000003",
                 "CLI:000000000000000000000000000000000008"));
     final List<TimeIntervalColumnHeader> columnHeaders =
-        Collections.singletonList(new TimeIntervalColumnHeader(0, 0));
+        List.of(new TimeIntervalColumnHeader(0, 0));
 
     final List<MonitorQueryItem> expectedResult = new ArrayList<>();
     MonitorQueryItem monitorQueryItem = new MonitorQueryItem();
@@ -188,23 +186,20 @@ class WorkbasketReportBuilderImplTest {
 
   @Test
   void testGetTaskIdsOfCategoryReportForSelectedItems() throws Exception {
-    final List<String> workbasketIds =
-        Collections.singletonList("WBI:000000000000000000000000000000000001");
+    final List<String> workbasketIds = List.of("WBI:000000000000000000000000000000000001");
     final List<TaskState> states = Arrays.asList(TaskState.CLAIMED, TaskState.READY);
-    final List<String> categories = Collections.singletonList("EXTERN");
-    final List<String> domains = Collections.singletonList("DOMAIN_A");
-    final List<String> classificationIds = Collections.singletonList("L10000");
-    final List<String> excludedClassificationIds = Collections.singletonList("L20000");
+    final List<String> categories = List.of("EXTERN");
+    final List<String> domains = List.of("DOMAIN_A");
+    final List<String> classificationIds = List.of("L10000");
+    final List<String> excludedClassificationIds = List.of("L20000");
     Map<TaskCustomField, String> customAttributeFilter = new HashMap<>();
     customAttributeFilter.put(TaskCustomField.CUSTOM_1, "Geschaeftsstelle A");
     final List<TimeIntervalColumnHeader> columnHeaders =
-        Collections.singletonList(new TimeIntervalColumnHeader(0, 0));
+        List.of(new TimeIntervalColumnHeader(0, 0));
 
-    List<SelectedItem> selectedItems =
-        Collections.singletonList(new SelectedItem("EXTERN", null, 1, 5));
+    List<SelectedItem> selectedItems = List.of(new SelectedItem("EXTERN", null, 1, 5));
 
-    List<String> expectedResult =
-        Collections.singletonList("TKI:000000000000000000000000000000000001");
+    List<String> expectedResult = List.of("TKI:000000000000000000000000000000000001");
     when(monitorMapperMock.getTaskIdsForSelectedItems(
             workbasketIds,
             states,
@@ -265,7 +260,7 @@ class WorkbasketReportBuilderImplTest {
         () -> {
           List<String> result =
               cut.createWorkbasketReportBuilder()
-                  .workbasketIdIn(Collections.singletonList("DieGibtsGarantiertNed"))
+                  .workbasketIdIn(List.of("DieGibtsGarantiertNed"))
                   .listTaskIdsForSelectedItems(selectedItems, TaskTimestamp.DUE);
           assertThat(result).isNotNull();
         };
@@ -274,19 +269,18 @@ class WorkbasketReportBuilderImplTest {
 
   @Test
   void testListCustomAttributeValuesForCustomAttributeName() throws Exception {
-    final List<String> workbasketIds =
-        Collections.singletonList("WBI:000000000000000000000000000000000001");
+    final List<String> workbasketIds = List.of("WBI:000000000000000000000000000000000001");
     final List<TaskState> states = Arrays.asList(TaskState.CLAIMED, TaskState.READY);
-    final List<String> categories = Collections.singletonList("EXTERN");
-    final List<String> domains = Collections.singletonList("DOMAIN_A");
-    final List<String> classificationIds = Collections.singletonList("L10000");
-    final List<String> excludedClassificationIds = Collections.singletonList("L20000");
+    final List<String> categories = List.of("EXTERN");
+    final List<String> domains = List.of("DOMAIN_A");
+    final List<String> classificationIds = List.of("L10000");
+    final List<String> excludedClassificationIds = List.of("L20000");
     Map<TaskCustomField, String> customAttributeFilter = new HashMap<>();
     customAttributeFilter.put(TaskCustomField.CUSTOM_1, "Geschaeftsstelle A");
     final List<TimeIntervalColumnHeader> columnHeaders =
-        Collections.singletonList(new TimeIntervalColumnHeader(0, 0));
+        List.of(new TimeIntervalColumnHeader(0, 0));
 
-    List<String> expectedResult = Collections.singletonList("Geschaeftsstelle A");
+    List<String> expectedResult = List.of("Geschaeftsstelle A");
     when(monitorMapperMock.getCustomAttributeValuesForReport(
             workbasketIds,
             states,
@@ -330,24 +324,23 @@ class WorkbasketReportBuilderImplTest {
   void testListCustomAttributeValuesForCustomAttributeNameIsEmptyResult() throws Exception {
     List<String> result =
         cut.createWorkbasketReportBuilder()
-            .workbasketIdIn(Collections.singletonList("GibtsSicherNed"))
+            .workbasketIdIn(List.of("GibtsSicherNed"))
             .listCustomAttributeValuesForCustomAttributeName(TaskCustomField.CUSTOM_14);
     assertThat(result).isNotNull();
   }
 
   @Test
   void testGetTotalNumbersOfWorkbasketReportBasedOnCreatedDate() throws Exception {
-    final List<String> workbasketIds =
-        Collections.singletonList("WBI:000000000000000000000000000000000001");
+    final List<String> workbasketIds = List.of("WBI:000000000000000000000000000000000001");
     final List<TaskState> states = Arrays.asList(TaskState.CLAIMED, TaskState.READY);
-    final List<String> categories = Collections.singletonList("EXTERN");
-    final List<String> domains = Collections.singletonList("DOMAIN_A");
-    final List<String> classificationIds = Collections.singletonList("L10000");
-    final List<String> excludedClassificationIds = Collections.singletonList("L20000");
+    final List<String> categories = List.of("EXTERN");
+    final List<String> domains = List.of("DOMAIN_A");
+    final List<String> classificationIds = List.of("L10000");
+    final List<String> excludedClassificationIds = List.of("L20000");
     Map<TaskCustomField, String> customAttributeFilter = new HashMap<>();
     customAttributeFilter.put(TaskCustomField.CUSTOM_1, "Geschaeftsstelle A");
     final List<CombinedClassificationFilter> combinedClassificationFilter =
-        Collections.singletonList(
+        List.of(
             new CombinedClassificationFilter(
                 "CLI:000000000000000000000000000000000003",
                 "CLI:000000000000000000000000000000000008"));
